--- a/My website/index.html
+++ b/My website/index.html
@@ -10,7 +10,7 @@
 <div class="box">
   <img src="images/learning.jpeg" alt="" class="box-img">
   <h1>My Winter Web Development Class</h1>
-<h5>Web Developer - Student</h5>
+<h5>Web Developer - Student Winter 2021</h5>
 <p>
 Afro Fem Coders founded by Gloria Tumashabe is offering a Winter Web Development class to female students from allover Africa. I have the pleasure of being taught by incredible facilitators i.e Gloria and Haggai Kaunda.This training will last approximately 2 months. Below is overview of what we will be learning.</p> 
 <ul>
